# tonton-example

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  GEMINI.md  LF_RINTINTIN.md  README.md  build  node.LF_RINTINTIN.schema.json  notes.md  thirdparty  tonton-output.txt
.cache/clangd/index/: dodeedum_fxgltf_bridge.h.09B53EC52409FB45.idx  dodeedum_mesh.h.B15F32A849B7422F.idx  tonton_analysis.h.AA320F68E9B422D4.idx  tonton_articulations.h.18BA8D13B51FF918.idx  tonton_builder.h.12DA0B0AF2795686.idx  tonton_counted_ptr.hpp.88A4AFF8DC85619B.idx  tonton_eigen.h.E9082229C84DE2C5.idx  tonton_optional.hpp.87D8F56625D8A492.idx  tonton_shared_array.hpp.AA982A5ED9426724.idx  tonton_skinnedmesh.h.E7B8EDB45C4B4C26.idx  tonton_tensors.hpp.85668A5CE66F8AAC.idx  tonton_units.hpp.BA618B222D88912B.idx  tonton_wordlist.h.D8B850C5CAC1F638.idx
sample models/: README.md  batto.glb  cat.glb  cat.glb-output.gltf  cat.glb-tensors.glb  dragonfly-analyzed.glb  dragonfly-bad-materials.glb  dragonfly-tensors.glb  dragonfly.glb  dragonfly.glb-output.gltf  eel.glb  emporer scorpion.glb  llama.glb  manta-ray.glb  mantis.glb  moth-tensors.glb  moth.glb  moth.glb-output.gltf  penguin-analyzed.glb  penguin.glb  shark-bad-bone.glb  shark.glb  shark.glb-output.gltf  shark.glb-tensors.glb  treefrog.glb
src/: chacha_fxgltf_bridge.cpp  chacha_fxgltf_bridge.h  chacha_main.cpp  get_armatures_from_files.cpp  get_armatures_from_files.h  gltf_rintintin_bridge.cpp  gltf_rintintin_bridge.h  lf_rintintin.cpp  lf_rintintin.h  primitives.cpp  primitives.h  rintintin_main.cpp  tonton_fxgltf_memo.cpp  tonton_fxgltf_memo.h  tonton_main.cpp  visualize_tensors.cpp  visualize_tensors.h
tests/: tonton_geometry_tests.cpp  tonton_plausibility_tests.cpp  tonton_wing_dump.cpp
